updated get by upc and list beers to return reactive typex